--- a/Demo/Demo.csproj
+++ b/Demo/Demo.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TreeDto.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
