--- a/ApkReader/ApkReader.csproj
+++ b/ApkReader/ApkReader.csproj
@@ -159,7 +159,8 @@
     <Compile Include="Manifest\ApkUsesPermissionSdk23.cs" />
     <Compile Include="Manifest\IApkIntentedNode.cs" />
     <Compile Include="MfFile.cs" />
-    <Compile Include="Signature\ApkSignatureInfo.cs" />
+    <Compile Include="Signature\ApkSignatureBlock.cs" />
+    <Compile Include="Signature\ApkSignatureV2Block.cs" />
     <Compile Include="XmlNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Dex\TableClass.cs" />
