--- a/ApkReader/ApkReader.csproj
+++ b/ApkReader/ApkReader.csproj
@@ -4,14 +4,15 @@
     <OutputType>Library</OutputType>
     <RootNamespace>AlphaOmega.Debug</RootNamespace>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-    <AssemblyTitle>Android Package Reader</AssemblyTitle>
+    <AssemblyTitle>ApkReader</AssemblyTitle>
     <Company>Danila Korablin</Company>
-    <Product>ApkReader</Product>
+    <Product>Android Package Reader</Product>
     <Copyright>Copyright © Danila Korablin 2016-2023</Copyright>
+    <Configuration>Debug</Configuration>
     <AssemblyVersion>1.0.*</AssemblyVersion>
     <FileVersion>1.0.0.0</FileVersion>
     <Deterministic>false</Deterministic>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <OutputPath>..\..\bin\</OutputPath>
@@ -19,8 +20,7 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
 <PropertyGroup>
-    <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
-    <SignAssembly>True</SignAssembly>
+    <SignAssembly>False</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\..\..\..\AlphaOmega (NoPwd).snk</AssemblyOriginatorKeyFile>
 </PropertyGroup>
   <ItemGroup>
@@ -63,94 +63,5 @@
     <Compile Include="..\FileReader.Shared\ImageLoader\StreamLoader.cs">
       <Link>ImageLoader\StreamLoader.cs</Link>
     </Compile>
-    <Compile Include="ArscApi.cs" />
-    <Compile Include="Arsc\ResourcePackage.cs" />
-    <Compile Include="Arsc\ResourceRow.cs" />
-    <Compile Include="Arsc\ResourceType.cs" />
-    <Compile Include="Arsc\ResourceTypeEntryComplex.cs" />
-    <Compile Include="Arsc\ResourceTypeEntry.cs" />
-    <Compile Include="Arsc\ResourceTypeEntrySimple.cs" />
-    <Compile Include="Arsc\StringPool.cs" />
-    <Compile Include="Arsc\TypeSpec.cs" />
-    <Compile Include="AxmlApi.cs" />
-    <Compile Include="AxmlFile.cs" />
-    <Compile Include="Axml\AxmlChunk.cs" />
-    <Compile Include="Dex\Constant.cs" />
-    <Compile Include="Dex\BaseRow.cs" />
-    <Compile Include="Dex\BaseTable.cs" />
-    <Compile Include="Dex\Cell.cs" />
-    <Compile Include="Dex\Column.cs" />
-    <Compile Include="Dex\ColumnType.cs" />
-    <Compile Include="Dex\Row.cs" />
-    <Compile Include="Dex\RowReference.cs" />
-    <Compile Include="Dex\Table.cs" />
-    <Compile Include="Dex\TableAnnotationDirectory.cs" />
-    <Compile Include="Dex\TableCode.cs" />
-    <Compile Include="Dex\TableEncodedCatchHandler.cs" />
-    <Compile Include="Dex\TableString.cs" />
-    <Compile Include="Dex\Tables\annotation_directory_row.cs" />
-    <Compile Include="Dex\Tables\annotation_set_ref_row.cs" />
-    <Compile Include="Dex\Tables\annotation_set_row.cs" />
-    <Compile Include="Dex\Tables\class_data_row.cs" />
-    <Compile Include="Dex\Tables\class_def_row.cs" />
-    <Compile Include="Dex\Tables\code_row.cs" />
-    <Compile Include="Dex\Tables\encoded_catch_handler_row.cs" />
-    <Compile Include="Dex\Tables\encoded_field_row.cs" />
-    <Compile Include="Dex\Tables\encoded_method_row.cs" />
-    <Compile Include="Dex\Tables\encoded_type_addr_pair_row.cs" />
-    <Compile Include="Dex\Tables\field_annotation_row.cs" />
-    <Compile Include="Dex\Tables\field_id_row.cs" />
-    <Compile Include="Dex\Tables\method_annotation_row.cs" />
-    <Compile Include="Dex\Tables\method_id_row.cs" />
-    <Compile Include="Dex\Tables\parameter_annotation_row.cs" />
-    <Compile Include="Dex\Tables\proto_id_row.cs" />
-    <Compile Include="Dex\Tables\string_data_row.cs" />
-    <Compile Include="Dex\Tables\string_id_row.cs" />
-    <Compile Include="Dex\Tables\try_item_row.cs" />
-    <Compile Include="Dex\Tables\type_id_row.cs" />
-    <Compile Include="Dex\Tables\type_list_row.cs" />
-    <Compile Include="Dex\TableType.cs" />
-    <Compile Include="DexApi.cs" />
-    <Compile Include="DexFile.cs" />
-    <Compile Include="Manifest\ApkAction.cs" />
-    <Compile Include="Manifest\ApkActivity.cs" />
-    <Compile Include="Manifest\ApkActivityAlias.cs" />
-    <Compile Include="Manifest\ApkApplication.cs" />
-    <Compile Include="Manifest\ApkCategory.cs" />
-    <Compile Include="Manifest\ApkData.cs" />
-    <Compile Include="Manifest\ApkGrantUriPermission.cs" />
-    <Compile Include="Manifest\ApkIntentFilter.cs" />
-    <Compile Include="Manifest\AndroidManifest.cs" />
-    <Compile Include="Manifest\ApkMetaData.cs" />
-    <Compile Include="Manifest\ApkNode.cs" />
-    <Compile Include="Manifest\ApkNodeT.cs" />
-    <Compile Include="Manifest\ApkPathPermission.cs" />
-    <Compile Include="Manifest\ApkPermission.cs" />
-    <Compile Include="Manifest\ApkPermissionGroup.cs" />
-    <Compile Include="Manifest\ApkPermissionTree.cs" />
-    <Compile Include="Manifest\ApkProvider.cs" />
-    <Compile Include="Manifest\ApkReceiver.cs" />
-    <Compile Include="Manifest\ApkService.cs" />
-    <Compile Include="Manifest\ApkSupportsGlTexture.cs" />
-    <Compile Include="Manifest\ApkSupportsScreen.cs" />
-    <Compile Include="Manifest\ApkUsesConfiguration.cs" />
-    <Compile Include="Manifest\ApkUsesLibrary.cs" />
-    <Compile Include="Manifest\ApkUsesPermission.cs" />
-    <Compile Include="Manifest\ApkUsesFeature.cs" />
-    <Compile Include="Manifest\ApkUsesPermissionSdk23.cs" />
-    <Compile Include="Manifest\IApkIntentedNode.cs" />
-    <Compile Include="MfFile.cs" />
-    <Compile Include="Signature\ApkSignatureVerifier.cs" />
-    <Compile Include="Signature\ApkV2SignatureVerifier.cs" />
-    <Compile Include="Signature\V1SchemeBlock.cs" />
-    <Compile Include="Signature\V2SchemeBlock.cs" />
-    <Compile Include="XmlNode.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Dex\TableClass.cs" />
-    <Compile Include="ArscFile.cs" />
-    <Compile Include="ApkFile.cs" />
-    <Compile Include="Resources.cs" />
-    <Compile Include="Utils.cs" />
-    <Compile Include="ApkSignature.cs" />
   </ItemGroup>
 </Project>
