--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -36,6 +36,8 @@ jobs:
       run: dotnet build ApkReader.sln --configuration Release --no-restore /p:Configuration=Release /p:AssemblyVersion=${{ steps.tag_version.outputs.new_version }} /p:SignAssembly=true /p:AssemblyOriginatorKeyFile="${{ steps.sign_key_file.outputs.filePath }}"
     - name: Test
       run: dotnet test ApkReader.sln --no-build --verbosity normal
+    - name: Zip artifact for deployment
+      run: zip release.zip ./* -r
     - name: Deploy GitHub release
       uses: ncipollo/release-action@v1
       with:
