--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -37,8 +37,10 @@ jobs:
     - name: Test
       run: dotnet test ApkReader.sln --no-build --verbosity normal
     - name: Zip artifact for deployment
-      run: zip -qq -r release.zip /*
-      working-directory: ${{github.workspace}}/../bin/netstandard2.0
+      uses: vimtor/action-zip@v1
+      with:
+        files: ${{github.workspace}}/../bin/netstandard2.0/
+        dest: release.zip
     - name: Deploy GitHub release
       uses: ncipollo/release-action@v1
       with:
