--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -37,10 +37,8 @@ jobs:
     - name: Test
       run: dotnet test ApkReader.sln --no-build --verbosity normal
     - name: Zip artifact for deployment
-      uses: vimtor/action-zip@v1
-      with:
-        files: ${{github.workspace}}/../bin/netstandard2.0/
-        dest: release.zip
+      run: zip -qq -r release.zip *
+      working-directory: ${{github.workspace}}/../bin/netstandard2.0
     - name: Deploy GitHub release
       uses: ncipollo/release-action@v1
       with:
