--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Test
       run: dotnet test ApkReader.sln --no-build --verbosity normal
     - name: Zip artifact for deployment
-      run: zip -qq -r release.zip *.dll
+      run: zip -qq -r release.zip *.*
       working-directory: ${{github.workspace}}/../bin/netstandard2.0
     - name: Deploy GitHub release
       uses: ncipollo/release-action@v1
