--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -43,7 +43,7 @@ jobs:
       uses: ncipollo/release-action@v1
       with:
 #        artifacts: ${{github.workspace}}/../bin/netstandard2.0/*.dll
-        artifacts: release.zip
+        artifacts: ${{github.workspace}}/../bin/netstandard2.0/release.zip
         tag: ${{ steps.tag_version.outputs.new_tag }}
         name: Auto ${{ steps.tag_version.outputs.new_tag }}
         body: ${{ steps.tag_version.outputs.changelog }}
