--- a/ApkReader/ApkReader.csproj
+++ b/ApkReader/ApkReader.csproj
@@ -24,6 +24,9 @@
     <SignAssembly>False</SignAssembly>
     <AssemblyOriginatorKeyFile>..\..\..\..\..\AlphaOmega (NoPwd).snk</AssemblyOriginatorKeyFile>
 </PropertyGroup>
+<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+  <DebugType>none</DebugType>
+</PropertyGroup>
   <ItemGroup>
     <PackageReference Include="SharpZipLib" Version="1.4.2" />
   </ItemGroup>
