--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,6 +26,7 @@ jobs:
       uses: mathieudutour/github-tag-action@v6.1
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
+        custom_tag: 2.0.0
     - name: Decode SNK
       id: sign_key_file
       uses: timheuer/base64-to-file@v1
@@ -33,16 +34,22 @@ jobs:
         fileName: 'Signature.snk'
         encodedString: ${{ secrets.SIGN_KEY }}
     - name: Build
-      run: dotnet build ApkReader.sln --configuration Release --no-restore /p:Configuration=Release /p:DebugType=none /p:AssemblyVersion=${{ steps.tag_version.outputs.new_version }} /p:SignAssembly=true /p:AssemblyOriginatorKeyFile="${{ steps.sign_key_file.outputs.filePath }}"
+      run: dotnet build ApkReader.sln --configuration Release --no-restore /p:Configuration=Release /p:DebugType=none /p:OutputPath="../bin/" /p:DocumentationFile="../bin/ApkReader.xml" /p:AssemblyVersion=${{ steps.tag_version.outputs.new_version }} /p:SignAssembly=true /p:AssemblyOriginatorKeyFile="${{ steps.sign_key_file.outputs.filePath }}"
     - name: Test
       run: dotnet test ApkReader.sln --no-build --verbosity normal
+    - name: Deploy artifacts
+      uses: actions/upload-artifact@v3
+      with:
+        name: Artifacts
+        path: ${{github.workspace}}/bin/*
+        if-no-files-found: error
     - name: Zip artifact
       run: zip -qq -r release.zip *.*
-      working-directory: ${{github.workspace}}/../bin/netstandard2.0
+      working-directory: ${{github.workspace}}/bin
     - name: Deploy GitHub
       uses: ncipollo/release-action@v1
       with:
-        artifacts: ${{github.workspace}}/../bin/netstandard2.0/release.zip
+        artifacts: ${{github.workspace}}/bin/release.zip
         tag: ${{ steps.tag_version.outputs.new_tag }}
         name: Auto ${{ steps.tag_version.outputs.new_tag }}
         body: ${{ steps.tag_version.outputs.changelog }}
