--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,7 +26,7 @@ jobs:
       uses: mathieudutour/github-tag-action@v6.1
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        custom_tag: 2.0.0
+        #custom_tag: 2.0.0
     - name: Decode SNK
       id: sign_key_file
       uses: timheuer/base64-to-file@v1
