--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,6 +48,8 @@ jobs:
     - uses: actions/checkout@v4
       with:
         submodules: true
+    - name: Restoring NuGet packages
+      run: nuget restore "${{github.workspace}}\${{env.SolutionName}}.sln"
     - name: Setup .NET Framework
       uses: microsoft/setup-msbuild@v2
     - name: Building .NET Framework
