--- a/ApkReader/ApkReader.csproj
+++ b/ApkReader/ApkReader.csproj
@@ -38,6 +38,16 @@
 			<_Parameter1>ProjectUrl</_Parameter1>
 			<_Parameter2>https://github.com/DKorablin/ApkReader</_Parameter2>
 		</AssemblyAttributes>
+		<PackageReference Include="SharpZipLib" Version="1.4.2" />
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net20'">
+		<PackageReference Include="SharpZipLib" Version="0.86.0" />
+	</ItemGroup>
+	<ItemGroup>
+		<!--Source Link Support-->
+		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
+		<!--Analyzers-->
+		<PackageReference Include="SonarAnalyzer.CSharp" Version="10.8.0.113526" PrivateAssets="All" IncludeAssets="Runtime; Build; Native; contentfiles; Analyzers; buildtransitive" />
 	</ItemGroup>
 	
 	<ItemGroup>
